[package]
name = "modfile"
version = "1.3.3"
authors = ["Mathias Olsson <hypp74@gmail.com>"]
description = "This is a Rust crate for reading and writing Amiga ProTracker MOD-files. It can also read (some?) MOD-files packed with The Player 6.1, including 8-bit and 4-bit delta packed samples."
readme = "README.md"
license = "MIT"
repository = "https://github.com/hypp/modfile"
