[package]
name = "modfile"
version = "1.5.0"
authors = ["Mathias Olsson <hypp74@gmail.com>"]
description = "This is a Rust crate for reading and writing Amiga ProTracker MOD-files. It can also read (some?) MOD-files packed with The Player 6.1, including 8-bit and 4-bit delta packed samples, and also create The Player 6.1 compatible files."
readme = "README.md"
license = "MIT"
repository = "https://github.com/hypp/modfile"

edition = "2018"

include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-big-array = "0.3"
